syntax = "proto3";

option go_package = "./pb";

package pb;

// model
message User {
  bytes userID = 1;
  string userName = 2;
  string email = 3;
  string phone = 4;
}

message UserProfile {
  bytes userID = 1;
  string avatarURL = 2;
  int32 onlineStatus = 3;
  string bio = 4;
  string birthday = 5;
  string gender = 6;
  string location = 7;
  string lastSeenAt = 8;
}

// req, resp
message RegisterReq {
  string userName = 1;
  string password = 2;
  string email = 3;
  string phone = 4;
}

message RegisterResp {
  string accessToken = 1;
  int64 accessExpire = 2;
  int64 refreshAfter = 3;
}

message LoginReq {
  string phone = 1;
  string password = 2;
}

message LoginResp {
  string accessToken = 1;
  int64 accessExpire = 2;
  int64 refreshAfter = 3;
}

message GetUserReq { bytes userID = 1; }

message GetUserResp { User user = 1; }

message ChangePwdReq {
  string phone = 1;
  string oldPassword = 2;
  string newPassword = 3;
}

message ChangePwdResp {}

message UpdateUserInfoReq {
  bytes userID = 1;
  string userName = 2;
  string email = 3;
  string phone = 4;
}

message UpdateUserInfoResp {}

message SetUserProfileReq { UserProfile userProfile = 1; }

message SetUserProfileResp {}

message GetUserProfileReq { bytes userID = 1; }

message GetUserProfileResp { UserProfile userProfile = 1; }

message UpdateUserProfileReq { UserProfile userProfile = 1; }

message UpdateUserProfileResp {}

message GenerateTokenReq { bytes userID = 1; }

message GenerateTokenResp {
  string accessToken = 1;
  int64 accessExpire = 2;
  int64 refreshAfter = 3;
}

service usercenter {
  rpc register(RegisterReq) returns (RegisterResp);
  rpc login(LoginReq) returns (LoginResp);
  rpc getUser(GetUserReq) returns (GetUserResp);
  rpc changePwd(ChangePwdReq) returns (ChangePwdResp);
  rpc updateUserInfo(UpdateUserInfoReq) returns (UpdateUserInfoResp);
  rpc setUserProfile(SetUserProfileReq) returns (SetUserProfileResp);
  rpc getUserProfile(GetUserProfileReq) returns (GetUserProfileResp);
  rpc updateUserProfile(UpdateUserProfileReq) returns (UpdateUserProfileResp);
  rpc generateToken(GenerateTokenReq) returns (GenerateTokenResp);
}